--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="{{ asset("/css/style.css") }}">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" type="image/png" href="./images/logo_small.png" />
-		<script src="./scripts/menus.js"></script>
+		<script src="{{ asset("scripts/menus.js") }}"></script>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
