--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,8 @@ body {
 	font-family: "QuickSand";
 	font-size: var(--text-size);
 	min-width: 100%;
-	min-height: 100%;
+	height: 100%;
+	min-height: 100vh;
 	margin: 0px;
 	word-break: break-word;
 }
@@ -52,15 +53,13 @@ body {
 	padding: 0px;
 	margin: 0px;
 	height: auto;
-	background-size: cover;
-	background-position: left top;
+	
 	overflow: hidden;
 	max-height: 50vh;
 }
 .background-image > img {
 	width: 100%;
-	height: 100%;
-	max-height: 50vh;
+	height: auto;
 }
 .page-title {
 	font-size: 3em;
@@ -161,9 +160,14 @@ a:hover {
 	color: var(--color-accent);
 }
 
+.padding-nav {
+	padding-top: 64px;
+}
+
 #navBar {
-	position: -webkit-sticky;
-	position: sticky;
+	/*position: -webkit-sticky;
+	position: sticky;*/
+	position: fixed;
 	top:0;
 	background-color: var(--color-lighter);
 	/*backdrop-filter: blur(10px);
@@ -176,6 +180,7 @@ a:hover {
 	-webkit-box-shadow: 10px 10px 62px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 10px 10px 62px 0px rgba(0,0,0,0.75);
 	box-shadow: 10px 10px 62px 0px rgba(0,0,0,0.75);
+	width:calc(100% - 20px);
 }
 #menu {
 	display: none;
