--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,16 +14,15 @@
         <nav id="navBar">
 			<div id="website-title" onclick="window.location.href='/';"><img src="./images/logo_white.png"/></div>
 			<button id="menu" onclick="OpenMenu()"><img src="{{ asset("images/icons/menu.png") }}"/></button>
-			<button onclick="window.location.href='/pages';">Post</button>
+			<button onclick="window.location.href='/pages';">Pages</button>
 			<button onclick="window.location.href='/blog';">Blog</button>
 			<button>button</button>
 			<button>Contact</button>
 		</nav>
-		<div class="background-image" style='background: linear-gradient(transparent, var(--color-lighter)), url({% block bgImage %}{% endblock %}) no-repeat center;'>
+		<div class="background-image" style='background: linear-gradient(transparent, var(--color-lighter)), url({% block bgImage %}{% endblock %}) no-repeat center; background-size: cover; background-position: center;'>
 			<img src="{% block bgImageAff %}{% endblock %}" style="visibility: hidden;" />
 		</div>
-		
-		<div class="h-container full-width wrap-reverse can-grow">
+		<div class="h-container full-width wrap-reverse can-grow padding-nav">
 			<div class="v-container w-xs font-medium white border h-auto p-10 m-top-30 child-p-v-5 left-container">
 				{% block sideNav %}{% endblock %}
 			</div>
