--- a/templates/template_fragment/_post.html.twig
+++ b/templates/template_fragment/_post.html.twig
@@ -1,6 +1,6 @@
-<div class="post" onclick="window.location.href='https://google.com';">
-        <div class="post-content">
-            <img src={{ asset("images/page_thumbnails/3boxes.jpg") }}>
+<div class="post-link" onclick="window.location.href='{{ postLink}}';">
+        <div class="post-link-content">
+            <img src={{ postImage }}>
             <div>
                 <p>{{ postTitle }}</p>
                 <p>{{ postDescription }}</p>
