--- a/templates/home/pages.html.twig
+++ b/templates/home/pages.html.twig
@@ -30,9 +30,9 @@ Pages
 
 <div class="v-container all-width">
     {{ include('template_fragment/_splitter.html.twig', {splitterText: "Yesterday"}) }}
-    {{ include('template_fragment/_post.html.twig', {postTitle: "I'm a pages", postDescription: "I'm a pages description", postDate: "16.04.2020"}) }}
+    {{ include('template_fragment/_post.html.twig', {postLink: "https://symfony.com/", postImage: asset("images/page_thumbnails/3boxes.jpg"), postTitle: "I'm a pages", postDescription: "I'm a pages description", postDate: "16.04.2020"}) }}
     {{ include('template_fragment/_splitter.html.twig', {splitterText: "A week ago"}) }}
-    {{ include('template_fragment/_post.html.twig', {postTitle: "I'm a pages", postDescription: "I'm a pages description", postDate: "16.04.2020"}) }}
+    {{ include('template_fragment/_post.html.twig', {postLink: "https://symfony.com/", postImage: asset("images/page_thumbnails/3boxes.jpg"), postTitle: "I'm a pages", postDescription: "I'm a pages description", postDate: "16.04.2020"}) }}
     
 </div>
 {{ include('template_fragment/_search.html.twig') }}
