--- a/templates/template_fragment/_blog.html.twig
+++ b/templates/template_fragment/_blog.html.twig
@@ -1,8 +1,8 @@
-<div class="blog-link" onclick="window.location.href='{{ blogLink }}';">
+<div class="blog-link" onclick="window.location.href='{{ 'blog/' ~ blogPostLink.getWriter.getUuid }}';">
         <div class="blog-link-content">
-            <img src={{ userProfilPic }}>
+            <img src={{ asset(blogPostLink.getWriter.getProfilPic) }}>
             <div>
-                <p>{{ userNickName }}</p>
+                <p>{{ blogPostLink.getWriter.getNickName }}'s blog</p>
             </div>
         </div>
         <div class="arrow">»</div>
