Changed the user class, the unique identifier is now the username

--- a/templates/blog/user_blog.html.twig
+++ b/templates/blog/user_blog.html.twig
@@ -5,7 +5,7 @@ PCThings | Blog
 {% endblock %}
 
 {% block pageTitle %}
-{{ user.getNickName }}'s Blog
+{{ user.getUsername }}'s Blog
 {% endblock %}
 
 {% block bgImage %}
