--- a/public/css/style.css
+++ b/public/css/style.css
@@ -104,6 +104,13 @@ button:active {
 	background-color: var(--color-accent-darker);
 	border: solid 3px var(--color-accent);
 }
+
+.profile-button {
+	height: 2.2em;
+	border-radius: 100%;
+	width: auto;
+}
+
 footer {
 	margin-top: 30px;
 	background-color: var(--color-lighter);
@@ -248,68 +255,71 @@ footer {
 .bordered-child-b :nth-child(1n) {
 	border-bottom: 1px solid white 
 }
+.justify-start {
+	justify-content: flex-start;
+}
 
 /*width*/
 .w-xs {
-	width: 10%;
-	flex-basis: 10%;
+	width: 10% !important;
+	flex-basis: 10% !important;
 }
 .w-s {
-	width: 20%;
-	flex-basis: 20%;
+	width: 20% !important;
+	flex-basis: 20% !important;
 }
 .w-m {
-	width: 30%;
-	flex-basis: 30%;
+	width: 30% !important;
+	flex-basis: 30% !important;
 }
 .w-l {
-	width: 40%;
-	flex-basis: 40%;
+	width: 40% !important;
+	flex-basis: 40% !important;
 }
 .w-xl {
-	width: 50%;
-	flex-basis: 50%;
+	width: 50% !important;
+	flex-basis: 50% !important;
 }
 .all-width {
-	width: 100%;
+	width: 100% !important;
 }
 /*height*/
 .h-xs {
-	height: 10%;
-	flex-basis: 10%;
+	height: 10% !important;
+	flex-basis: 10% !important;
 }
 .h-s {
-	height: 20%;
-	flex-basis: 20%;
+	height: 20% !important;
+	flex-basis: 20% !important;
 }
 .h-m {
-	height: 30%;
-	flex-basis: 30%;
+	height: 30% !important;
+	flex-basis: 30% !important;
 }
 .h-l {
-	height: 40%;
-	flex-basis: 40%;
+	height: 40% !important;
+	flex-basis: 40% !important;
 }
 .h-xl {
-	height: 50%;
-	flex-basis: 50%;
+	height: 50% !important;
+	flex-basis: 50% !important;
 }
 .all-height {
-	height: 100%;
+	height: 100% !important;
 }
 .h-auto {
-	height: auto;
+	height: auto !important;
 }
 /*padding and margin*/
 .p-10 {
-	padding: 10px;
+	padding: 10px !important;
 }
 .m-top-30 {
-	margin-top: 30px;
+	margin-top: 30px !important;
 }
 .child-p-v-5 :nth-child(1n) {
-	padding-top: 5px;
-	padding-bottom: 5px;
+	padding-top: 5px !important;
+	padding-bottom: 5px !important;
 }
 /*font size*/
 .font-normal {
@@ -413,6 +423,31 @@ footer {
 	vertical-align: middle;
 	background-color: transparent !important;
 	border-radius: 0px;
+}
+
+.input {
+	background-color: var(--color-lighter);
+	border: none;
+	border-radius: 5px;
+	color: white;
+	padding: 5px;
+	font-size: 1em;
+	width: 100%;
+	flex-basis: 100%;
+	min-width: 0px;
+	transition: 0.5s;
+	border: 2px solid var(--color);
+	display: inline-block;
+}
+.input::placeholder {
+	color: #adadad;
+}
+.input:focus {
+	border: 2px solid var(--color-accent-darker);
+}
+
+form {
+	width: 60%;
 }
 
 
